src/objects/Account_Role_Detail_Capability__c.object
<CustomObject>
    <fields>
        <fullName>SEAM_Resolution__c</fullName>
        <description>Describes the resolution</description>
        <label>Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low_Resolution</fullName>
                    <label>Low Resolution</label>
                </value>
                <value>
                    <fullName>720p</fullName>
                </value>
                <value>
                    <fullName>1080p</fullName>
                </value>
                <value>
                    <fullName>4k</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SEAM_Retention_Period_Days__c</fullName>
        <description>Describes the number of retention days</description>
        <label>Footage Retention Period (Days)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SEAM_Security_Patrol_Type__c</fullName>
        <description>Describes the type of security patrol</description>
        <label>Security Patrol Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company_Security_Staff</fullName>
                    <label>Company Security Staff</label>
                </value>
                <value>
                    <fullName>Contracted</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SEAM_Zoom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if there is zoom</description>
        <label>Zoom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPPE_Method_Type__c</fullName>
        <description>Desbribe the method type of method of validation for Safety personnel and Protective equipment</description>
        <label>Method / Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stationary_Automated</fullName>
                    <label>Stationary / Automated</label>
                </value>
                <value>
                    <fullName>Hand_Held</fullName>
                    <label>Hand Held</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TCHA_Alarm_Range__c</fullName>
        <description>Alarm Range</description>
        <label>Alarm Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCHA_Temperature_Range__c</fullName>
        <description>Describes the range of temperature</description>
        <label>Temperature Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCHA_Total_Processing_Space__c</fullName>
        <description>Describes the total processing space</description>
        <label>Total Processing Space (in m2)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TSWA_Number_Of_Positions__c</fullName>
        <description>Describe the number of positions</description>
        <label>Number of Positions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TSWA_Storage_Space__c</fullName>
        <description>Describe the Storage Space in m2</description>
        <label>Storage Space (in m2)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TSWA_Storage_Volume__c</fullName>
        <description>Describe the Storage Volume in m3</description>
        <label>Storage Volume (in m3)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TSWA_Surface_Space__c</fullName>
        <description>Describe the surface space in m2</description>
        <label>Surface Space (in m2)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VPPC_Export__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describe if it is exported</description>
        <label>Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPPC_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describe if it is imported</description>
        <label>Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPPC_Last_Inspection__c</fullName>
        <description>Store private pictures url (Amazon S3) separated by \n</description>
        <label>Last Inspection</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VPPC_Map_Location_Method_Pest__c</fullName>
        <description>Store private pictures url (Amazon S3) separated by \n</description>
        <label>Map Location Method Pest</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VPPC_Number_Sch_Inspections_Year__c</fullName>
        <description>Describe the number of inspections per year scheduled</description>
        <label>Number of Scheduled Inspections per year</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VPPC_Quarantine_Room_Dimensions_H__c</fullName>
        <description>Describe the dimensions of the quarantine room (height)</description>
        <label>Quarantine Room Dimensions (in m) Height</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPPC_Quarantine_Room_Dimensions_L__c</fullName>
        <description>Describe the dimensions of the quarantine room (Length)</description>
        <label>Quarantine Room Dimensions (in m) Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPPC_Quarantine_Room_Dimensions_W__c</fullName>
        <description>Describe the dimensions of the quarantine room (width)</description>
        <label>Quarantine Room Dimensions (in m) Width</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WVDE_Linked_Facility_Management_Inv_Syst__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if there is facility management linked</description>
        <label>Linked to Facility Mng./Inventory System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WVDE_Max_Measuring_Size_H_Cm__c</fullName>
        <description>Describes the max measuring size height in cm</description>
        <label>Max. Measuring Size (in cm) Height</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WVDE_Max_Measuring_Size_L_Cm__c</fullName>
        <description>Describes the max measuring size length in cm</description>
        <label>Max. Measuring Size (in cm) Length</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WVDE_Max_Measuring_Size_W_Cm__c</fullName>
        <description>Describes the max measuring size width in cm</description>
        <label>Max. Measuring Size (in cm) Width</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WVDE_Max_Measuring_Weight_Kg__c</fullName>
        <description>Describes the max measuring size weight in cm</description>
        <label>Max. Measuring Weight (in kg)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Role Detail Capability</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Category__c</columns>
        <columns>Equipment__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Role Detail Capability</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Role Detail Capability</pluralLabel>
    <recordTypes>
        <fullName>Active_ULD_Equipment</fullName>
        <active>true</active>
        <label>Active ULD Equipment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Build_Up_Break_Down_Areas</fullName>
        <active>true</active>
        <label>Build-Up/Break Down Areas</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cargo_Handling_System_Audit_Trail_Capacities</fullName>
        <active>true</active>
        <label>Cargo Handling System Audit Trail Capacities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cargo_Handling_System_Capacities</fullName>
        <active>true</active>
        <label>Cargo Handling System Capacities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cargo_Handling_System_Interface_Capacities</fullName>
        <active>true</active>
        <label>Cargo Handling System Interface Capacities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cargo_Handling_Warehouse_Management_System</fullName>
        <active>true</active>
        <label>Cargo Handling / Warehouse Management System</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cold_Room_Freezers_Custom_Temperature_Ranges</fullName>
        <active>true</active>
        <label>Temperature Controlled Rooms/Freezers - Custom Temp. Ranges</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cold_Room_Standard_Temperature_Ranges</fullName>
        <active>true</active>
        <label>Temperature Controlled Rooms - Standard Temp. Ranges</label>
    </recordTypes>
    <recordTypes>
        <fullName>Delivery_Pickup_Infrastructure</fullName>
        <active>true</active>
        <label>Delivery/Pickup Infrastructure</label>
    </recordTypes>
    <recordTypes>
        <fullName>Electronic_System_Capacities</fullName>
        <active>true</active>
        <label>Electronic System Capacities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Environmental_Compliance</fullName>
        <active>true</active>
        <label>Environmental Compliance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ground_Service_Equipment</fullName>
        <active>true</active>
        <label>Ground Support Equipment (GSE)</label>
    </recordTypes>
    <recordTypes>
        <fullName>IATA_XML_Messages_Cargo_Handling_System_Capabilities</fullName>
        <active>true</active>
        <label>IATA XML Messages Cargo Handling System Capabilities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live_Animals_Capacities</fullName>
        <active>true</active>
        <label>Live Animals Capacities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Temperature_Control_Equipment_Infrastructure</fullName>
        <active>true</active>
        <label>Other Temperature Control Equipment / Infrastructure</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pre_Cooling</fullName>
        <active>true</active>
        <label>Pre-Cooling</label>
    </recordTypes>
    <recordTypes>
        <fullName>Safety_Personal_And_Protective_Equipment</fullName>
        <active>true</active>
        <label>Safety, Personal And Protective Equipment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scanners</fullName>
        <active>true</active>
        <label>Scanners</label>
    </recordTypes>
    <recordTypes>
        <fullName>Screening_Equipment</fullName>
        <active>true</active>
        <label>Screening Equipment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Security_Equipment_And_Measures</fullName>
        <active>true</active>
        <label>Security Equipment And Measures</label>
    </recordTypes>
    <recordTypes>
        <fullName>System_For_Mail_Tracking_And_Reporting</fullName>
        <active>true</active>
        <label>System for Mail Tracking and Reporting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Temperature_Controlled_Dollies_Trucks</fullName>
        <active>true</active>
        <label>Temperature Controlled Dollies/Trucks</label>
    </recordTypes>
    <recordTypes>
        <fullName>Temperature_Controlled_Handling_Areas</fullName>
        <active>true</active>
        <label>Temperature Controlled Handling Areas</label>
    </recordTypes>
    <recordTypes>
        <fullName>Temporary_Storage_And_Working_Areas</fullName>
        <active>true</active>
        <label>Temporary Storage And Working Areas</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transport_Vehicles</fullName>
        <active>true</active>
        <label>Transport Vehicles</label>
    </recordTypes>
    <recordTypes>
        <fullName>ULD_Storage</fullName>
        <active>true</active>
        <label>ULD Storage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Veterinary_Phytosanitary_And_Pest_Control</fullName>
        <active>true</active>
        <label>Veterinary, Phytosanitary And Pest Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Weight_Volume_And_Dimension_Equipment</fullName>
        <active>true</active>
        <label>Weight, Volume And Dimension Equipment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>